--- a/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -524,19 +524,16 @@
                                                 <ColumnDefinition Width="Auto"/>
                                                 <ColumnDefinition Width="Auto"/>
                                             </Grid.ColumnDefinitions>
-
+                                            <materialDesign:PackIcon Kind="Autorenew" Height="10" Width="10" Margin="2,3,0,0" Foreground="Green"/>
                                             <TextBlock Text="syncing" Grid.Column="0" Name="ConnectionPercentTxt"
-                                                    FontFamily="Microsoft YaHei" FontSize="10" Foreground="Green">
-                                                 <materialDesign:PackIcon Kind="Autorenew" Height="10" Width="10" HorizontalAlignment="Center"/>
+                                                    FontFamily="Microsoft YaHei" FontSize="10" Foreground="Green" Grid.ColumnSpan="3" Margin="15,0,184,0">
+
                                             </TextBlock>
-                                            <TextBlock Text="...0"  Grid.Column="2" Name="ConnectedCountTxt" FontSize="10" Foreground="Green" Margin="28,0,133,0" >
-                                                 <materialDesign:PackIcon Kind="People" Height="10" Width="10"/>
-                                            </TextBlock>
-                                            <Label  Content="Not stacking" x:Name="StakingInfo"  Grid.Column="2" Foreground="Green" Margin="61,-4,58,4">
-                                                <!--<Image x:Name="StakingInfoImage" Width="40" Height="40" /> ToolTip="{Binding StakingInfo}"-->
-                                            </Label>
-                                            <Image Grid.Column="2"  x:Name="thumbDown" HorizontalAlignment="Left" VerticalAlignment="Center" Height="20" Width="24" Source="/Assets/Images/thumbsdown.png" Margin="134,0,0,0" />
-                                            <Image Grid.Column="2" Visibility="Collapsed"  x:Name="thumbsup" HorizontalAlignment="Left" VerticalAlignment="Center" Height="20" Width="24" Source="/Assets/Images/thumbsup.png" Margin="122,0,0,0" />
+                                            <materialDesign:PackIcon Kind="People" Grid.Column="1" Height="10" Width="10" Margin="20,2,0,0" Foreground="Green"/>
+                                            <TextBlock Text="0"  Grid.Column="1" Name="ConnectedCountTxt" FontSize="10" Foreground="Green" Margin="40,0,10,0" ></TextBlock>
+                                            <Label x:Name="StakingInfo" Content="Not Stacking"  FontSize="10" Grid.Column="1" Foreground="Green" Margin="50,-4,0,0"></Label>
+                                            <Image Grid.Column="2"  x:Name="thumbDown" HorizontalAlignment="Left" VerticalAlignment="Center" Height="20" Width="24" Source="/Assets/Images/thumbsdown.png" Margin="-40,0,0,0" />
+                                            <Image Grid.Column="2" Visibility="Collapsed"  x:Name="thumbsup" HorizontalAlignment="Left" VerticalAlignment="Center" Height="20" Width="24" Source="/Assets/Images/thumbsup.png" Margin="-20,0,0,0" />
                                         </Grid>
                                     </Border>
 
