--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/SendUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/SendUserControl.xaml
@@ -11,7 +11,7 @@
     <Grid>
         <Rectangle Fill="#e9eeeb" Opacity=".8" MouseDown="Rectangle_MouseDown" />
 
-        <Border CornerRadius="10"  Background="White" Height="550" Width="700">
+        <Border CornerRadius="10"  Background="White" Height="550" Width="700" BorderBrush="Green" BorderThickness="2">
             <Grid Margin="5,5,5,5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30" />
