--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/ImportSelsBelsUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/ImportSelsBelsUserControl.xaml
@@ -11,7 +11,7 @@
     <Grid Background="White">
         <Rectangle Fill="AliceBlue" Opacity=".8" MouseDown="Rectangle_MouseDown" /> 
         
-        <Border Margin="20" CornerRadius="10"  Background="White" Height="550" Width="600">
+        <Border Margin="20" CornerRadius="10"  Background="White" BorderBrush="Green" BorderThickness="2" Height="500" Width="600">
             <Grid Margin=" 5 5 5 5">
 
                 <Grid.RowDefinitions>
@@ -28,12 +28,21 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <Label Grid.Column="0" Margin="0 25 0 0" Content="Import Address" HorizontalAlignment="Center" FontSize="20" FontWeight="DemiBold"  />
+                        <Label Grid.Column="0" Margin="10 10 10 50" Content="IMPORT ADDRESS" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" FontWeight="DemiBold"  />
+                        <Button Click="HidePopup_Click" Background="Black" Foreground="White"
+                                VerticalAlignment="Top" HorizontalAlignment="Right" Content="X" >
+
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="50"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
                     </Grid>
                     
                 </Border>
 
-                <Border Grid.Row="01" Margin="5">
+                <Border Grid.Row="01" Margin="40,0,40,0">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
@@ -42,13 +51,13 @@
                         </Grid.RowDefinitions>
 
                         <Label Grid.Row="0" Content="Your Wallet(Xels) Mnemonic:" BorderBrush="Green" />
-                        <TextBox Grid.Row="1" Name="MnemonicTxt" BorderBrush="Green"  />
+                        <TextBox Grid.Row="1" Name="MnemonicTxt" BorderBrush="Green"  materialDesign:HintAssist.Hint="Xels Wallet Mnemonic"  materialDesign:HintAssist.IsFloating="False" />
                         <!--<PasswordBox  Grid.Row="2" x:Name="Password" />-->
 
                     </Grid>
                 </Border>
 
-                <Border Grid.Row="02"  Margin="5" >
+                <Border Grid.Row="02"  Margin="40,0,40,0" >
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -58,13 +67,13 @@
                     
                 </Border>
 
-                <Border Grid.Row="3" x:Name="SelsBelsBorder"  Margin="5">
+                <Border Grid.Row="3" x:Name="SelsBelsBorder"  Margin="40,0,40,0">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                       
+
                         <Border Grid.Row="0" Margin="5">
                             <Grid>
                                 <Grid.RowDefinitions>
@@ -73,7 +82,7 @@
                                 </Grid.RowDefinitions>
 
                                 <Label Grid.Row="0" Content="SELS Private Key:" BorderBrush="Green" />
-                                <TextBox Grid.Row="1" BorderBrush="Green" Name="SELSPrivateKeyTxt"/>
+                                <TextBox Grid.Row="1" BorderBrush="Green" Name="SELSPrivateKeyTxt"  materialDesign:HintAssist.Hint="Your SELS pk"  materialDesign:HintAssist.IsFloating="False" />
 
                             </Grid>
                         </Border>
@@ -86,18 +95,18 @@
                                 </Grid.RowDefinitions>
 
                                 <Label Grid.Row ="0"  Content="BELS Private Key:" BorderBrush="Green" />
-                                <TextBox Grid.Row ="1" BorderBrush="Green"   Name="BELSPrivateKeyTxt" />
+                                <TextBox Grid.Row ="1" BorderBrush="Green"   Name="BELSPrivateKeyTxt"  materialDesign:HintAssist.Hint="Your BELS pk"  materialDesign:HintAssist.IsFloating="False" />
 
                             </Grid>
                         </Border>
                     </Grid>
                 </Border>
 
-                <Border Grid.Row="4" Margin="5">
+                <Border Grid.Row="4" Margin="40,0,40,0">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
+                           
                         </Grid.ColumnDefinitions>
                         <Button Grid.Column="0" x:Name="TransactionIDCopyButton"   Click="TransactionIDCopyButton_Click" 
                             Content="Import Now"  
@@ -116,14 +125,7 @@
                                 </TransformGroup>
                             </Button.RenderTransform>
                         </Button>
-                        <Button Grid.Column="1" Margin="15 0 0 0" Click="HidePopup_Click" Background="WhiteSmoke" Content="Close" Foreground="Green" >
-
-                            <Button.Resources>
-                                <Style TargetType="{x:Type Border}">
-                                    <Setter Property="CornerRadius" Value="50"/>
-                                </Style>
-                            </Button.Resources>
-                        </Button>
+                       
 
                     </Grid>
                 </Border>
