--- a/src/XelsDesktopWalletApp/Views/Pages/SendPages/SidechainPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/SendPages/SidechainPage.xaml
@@ -7,9 +7,10 @@
       mc:Ignorable="d" 
       d:DesignHeight="550" d:DesignWidth="700"
       Title="SidechainPage">
+    
 
 
-    <Grid Margin="2,2,2,10" Background="White">
+        <Grid Background="White">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -24,7 +25,7 @@
 
 
         <!--Amount-->
-        <Border Grid.Row="0" Margin="50 2" >
+        <Border Grid.Row="0" Margin="100 0" >
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -58,7 +59,7 @@
         </Border>
 
         <!--Address-->
-        <Border Grid.Row="1" Margin="50 2">
+        <Border Grid.Row="1" Margin="100 0">
             <Grid>
 
                 <Grid.RowDefinitions>
@@ -72,7 +73,7 @@
             </Grid>
         </Border>
 
-        <Border Grid.Row="2" Margin="50 2">
+        <Border Grid.Row="2" Margin="100 0">
             <Grid>
 
                 <Grid.RowDefinitions>
@@ -90,7 +91,7 @@
         </Border>
 
         <!--- transaction fee-->
-        <Border Grid.Row="3" Margin="50 2">
+        <Border Grid.Row="3" Margin="100 0">
             <Grid>
 
                 <Grid.RowDefinitions>
@@ -107,9 +108,7 @@
             </Grid>
         </Border>
 
-
-
-        <Border Grid.Row="4" Margin=" 50 5"  >
+        <Border Grid.Row="4" Margin="100 0"  >
 
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -131,10 +130,8 @@
 
         </Border>
 
-
-
         <!--password-->
-        <Border Grid.Row="5" Margin="50 2" >
+        <Border Grid.Row="5" Margin="100 0" >
             <Grid>
 
                 <Grid.RowDefinitions>
@@ -148,7 +145,7 @@
         </Border>
 
         <!---   button -->
-        <Border Grid.Row="6" Margin="50 2" >
+        <Border Grid.Row="6" Margin="100 0" >
             <Grid >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -158,7 +155,7 @@
 
                 <Button x:Name="sendButton" Click="sendButton_Click"  Content="Send" Padding="2" 
                         Background="Green" 
-                        Foreground="White" Grid.ColumnSpan="2" Margin="10,7,10,7">
+                        Foreground="White" Grid.ColumnSpan="2" Margin="0,7,0,30">
                     <Button.Resources>
                         <Style TargetType="Border">
                             <Setter Property="CornerRadius" Value="5"/>
